# Segmentor_training

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  test.py  train.py
configs/: config.yaml
configs/model/: default.yaml
configs/processing/: default.yaml
configs/training/: default.yaml
data_utils/: __init__.py  loader.py  transform.py
deployment/: .dockerignore  Dockerfile  app.py  infer.py  requirements.txt  utils.py
model_utils/: __init__.py  loader.py  onnx_conversion.py
notebook/: data_utitlity.ipynb  result_visualisation.ipynb  smp_to_onnx.ipynb  training_data_visualisation.ipynb
