[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 35.0.2",
  "setuptools_scm >= 2.0.0, <3",
]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 119
target-version = ['py35', 'py36', 'py37', 'py38']

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore::UserWarning", # note the use of single quote below to denote "raw" strings in TOML
  "ignore::DeprecationWarning",
  'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
norecursedirs = ["tests/helpers", "tests/distributed"]
